# distributed-physics-prototype

./: Cargo.toml  README.md  build_for_deploy.sh
crates/steadyum-api-types/: Cargo.toml
crates/steadyum-api-types/src/: env.rs  lib.rs  messages.rs  objects.rs  partitionner.rs  region_db.rs  serialization.rs  simulation.rs  zenoh.rs
crates/steadyum-distributed/: Cargo.toml
crates/steadyum-distributed/src/: cli.rs  main.rs
crates/steadyum-distributed/src/builtin_scenes/: mod.rs
crates/steadyum-distributed/src/builtin_scenes/dim3/: killing_runners3.rs  mod.rs  pyramids3.rs  pyramids_for_sleeping3.rs  pyramids_light3.rs
crates/steadyum-distributed/src/operation/: clear_scene.rs  import_scene.rs  mod.rs  operations.rs  plugin.rs
crates/steadyum-distributed/src/render/: collision_shape_render.rs  components.rs  mod.rs  plugins.rs
crates/steadyum-distributed/src/storage/: db.rs  mod.rs  plugin.rs  position_interpolation.rs  systems.rs
crates/steadyum-distributed/src/styling/: color_generator.rs  mod.rs
crates/steadyum-distributed/src/ui/: main_menu.rs  mod.rs  play_stop.rs  plugin.rs  popup_menu.rs  simulation_infos.rs  ui_state.rs
crates/steadyum-distributed/src/utils/: animation.rs  bevy_mesh_conversion.rs  mod.rs  rapier_context.rs
crates/steadyum-partitionner/: Cargo.toml
crates/steadyum-partitionner/src/: cli.rs  main.rs  storage.rs
crates/steadyum-runner/: Cargo.toml
crates/steadyum-runner/src/: cli.rs  connected_components.rs  main.rs  neighbors.rs  region_assignment.rs  runner.rs  storage.rs  watch.rs
crates/steadyum-updater/: Cargo.toml
crates/steadyum-updater/src/: main.rs
