[workspace]
members = ["crates/*"]
resolver = "2"

[patch.crates-io]
#nalgebra = { git = "https://github.com/dimforge/nalgebra", branch = "additional-glam-conversion"}

#nalgebra = { path = "../nalgebra" }
#parry2d = { path = "../parry/crates/parry2d" }
#parry3d = { path = "../parry/crates/parry3d" }
#rapier2d = { path = "../rapier/crates/rapier2d" }
#rapier3d = { path = "../rapier/crates/rapier3d" }
#bevy_rapier2d = { path = "../bevy_rapier/bevy_rapier2d" }
#bevy_rapier3d = { path = "../bevy_rapier/bevy_rapier3d" }
#bevy_rapier2d = { git = "https://github.com/dimforge/bevy_rapier", branch = "gosim" }
#bevy_rapier3d = { git = "https://github.com/dimforge/bevy_rapier", branch = "gosim" }
zenoh = { path = "../zenoh/zenoh" }
