[package]
name = "steadyum-api-types"
version = "0.1.0"
edition = "2021"

[features]
default = [ ]
dim3 = [ "rapier3d" ]
dim2 = [ "rapier2d" ]

[dependencies]
serde = { version = "1", features = ["derive"] }
rapier3d = { version = "0.17", optional = true, features = [ "profiler", "serde-serialize" ] }
rapier2d = { version = "0.17", optional = true, features = [ "profiler", "serde-serialize" ] }
nalgebra = "0.32"
anyhow = "1"
serde_json = "1"
uuid = { version = "1", features = [ "serde" ] }
bincode = "1"
zenoh = { version = "0.10.0-rc", features = [ "unstable" ], optional = true }
log = "0.4.19"
bytemuck = { version = "1", features = [ "derive" ] }
reqwest = { version = "0.11", features = [ "blocking", "json" ] }
envconfig = "0.10"
lazy_static = "1"
dotenv = "0.15"
futures = "0.3"
tokio = "1"
lz4_flex = "0.11"