[package]
name = "steadyum-distributed"
version = "0.1.0"
authors = ["Sébastien Crozet <developer@crozet.re>"]
description = "3-dimensional physics sandbox."
documentation = "http://docs.rs/steadyum3d"
homepage = "http://rapier.rs"
repository = "https://github.com/dimforge/steadyum"
readme = "README.md"
keywords = ["physics", "dynamics", "rigid", "real-time", "joints"]
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "steadyum-distributed"

[features]
default = []
dim3 = ["rapier3d", "steadyum-api-types/dim3"]
dim2 = ["rapier2d", "steadyum-api-types/dim2"]
voxels = ["dot_vox"]

[dependencies]
nalgebra = { version = "0.32", features = ["convert-glam024"] }
# Don't enable the default features because we don't need the ColliderSet/RigidBodySet
rapier3d = { version = "0.17", optional = true, features = ["profiler"] }
rapier2d = { version = "0.17", optional = true, features = ["profiler"] }

bitflags = "1"
strum = "0.24"
strum_macros = "0.24"
image = "0.24"
winit = "0.28"
log = "0.4"
oorandom = "11"
bytemuck = "1"
serde = "1"
bincode = "1"
serde_json = "1"
noise = "0.8"
sled = "0.34"
clap = { version = "4", features = ["derive"] }
flume = "0.11"
anyhow = "1"
dashmap = "5"
uuid = "1"
reqwest = { version = "0.11", features = ["blocking"] }
dot_vox = { version = "5", optional = true }
instant = "0.1"
futures = "0.3"
tokio = "1"
async-compat = "0.2"
async-channel = "1"
rand = "0.8"

bevy = { version = "0.12", features = ["serialize"] }
bevy_egui = "0.23"
#bevy_stl = "0.7"
bevy_obj = "0.12"
#bevy_polyline = "0.4"
bevy_prototype_lyon = "0.10"
#bevy_infinite_grid = "0.6"
smooth-bevy-cameras = "0.10.0"

steadyum-api-types = { path = "../steadyum-api-types" }

# Not compatible with WASM
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
native-dialog = "0.6" # For opening mesh files.
zenoh = "0.10.0-rc" # For comunication with the distributed engine.
steadyum-api-types = { path = "../steadyum-api-types", features = ["zenoh"] }
