[package]
name = "steadyum-partitionner"
version = "0.1.0"
edition = "2021"

[features]
default = []
dim3 = ["steadyum-api-types/dim3"]
dim2 = ["steadyum-api-types/dim2"]

[dependencies]
serde_json = "1"
steadyum-api-types = { path = "../steadyum-api-types", features = ["zenoh"] }
anyhow = "1"
uuid = { version = "1", features = ["serde"] }
zenoh = "0.10.0-rc"
env_logger = "0.10.0"
log = "0.4.19"
axum = "0.6"
tokio = { version = "1", features = ["fs"] }
smol = "1"
dotenv_codegen = "0.15"
clap = { version = "4", features = ["derive"] }
local-ip-address = "0.5"
bytes = "1"
futures = "0.3"
async-channel = "2"