[package]
name = "steadyum-runner"
version = "0.1.0"
edition = "2021"


[features]
default = [ ]
dim3 = [ "rapier3d", "steadyum-api-types/dim3" ]
dim2 = [ "rapier2d", "steadyum-api-types/dim2" ]

[dependencies]
anyhow = "1"
rapier3d = { version = "0.17", optional = true, features = [ "profiler", "simd-stable" ] }
rapier2d = { version = "0.17", optional = true, features = [ "profiler", "simd-stable" ] }
clap     = { version = "4", features = [ "derive" ] }
serde_json = "1"
flume = "0.11"
uuid = { version = "1", features = [ "serde" ] }
axum = { version = "0.6", features = [ "json" ] }
smol = "1"
tokio = "1"
zenoh = "0.10.0-rc"
env_logger = "0.10"
log = "0.4.19"
futures = "0.3"
dashmap = "5"
async-channel = "1"

steadyum-api-types = { path = "../steadyum-api-types", features = [ "zenoh" ] }